# cardano-reference-scripts

./: .gitignore  CHANGELOG.md  GettingStarted.md  README.md  Tests.md  cardano-reference-scripts.cabal
app/: Main.hs
app/CLI/: BlockfrostApi.hs  Parsers.hs  QueryScript.hs  Run.hs  Types.hs
scripts/: close-shared-reference-script.sh  create-shared-reference-script.sh
src/: CardanoReferenceScripts.hs
test/: Test.hs
test/Test/: CloseSharedRef.hs  Common.hs  CreateSharedRef.hs
