cabal-version:      2.4
name:               cardano-reference-scripts
version:            0.1.0.0

synopsis: An application for sharing references scripts in a trustless manner.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: CHANGELOG.md

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

library
  import: lang
  exposed-modules: CardanoReferenceScripts
  build-depends:
    plutus-ledger,
    plutus-ledger-api,
    plutus-core,
    plutus-tx-plugin,
    plutus-tx,
    plutus-script-utils,
    cardano-api,
    bytestring,
    serialise,
    aeson,
    plutonomy,
  hs-source-dirs: src
  ghc-options: 
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

executable cardano-reference-scripts
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
